footer out of place-bug fix

--- a/src/components/Category/styles.module.scss
+++ b/src/components/Category/styles.module.scss
@@ -21,8 +21,8 @@
         .img {
             border-radius: 50%;
             cursor: pointer;
-            height: 6rem;
-            width: 6rem;
+            height: 5rem;
+            width: 5rem;
 
             &:hover {
                 transition-duration: 0.7s;
