--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -8,6 +8,11 @@
     color: $white;
     font-size: 1.2rem;
     padding: 1rem;
+    position: fixed;
+    width: 100vw;
+    height: 13rem;
+    bottom: 0;
+    left: 0;
 
     .links {
         @include flex(flex-start, center, row);
