--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,4 +14,5 @@ body {
     -moz-osx-font-smoothing: grayscale;
     background-color: $gray;
     font-family: 'Poppins', sans-serif;
+    margin-bottom: 15rem;
 }
